--- a/feature-home/src/main/res/values/strings.xml
+++ b/feature-home/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="deals_error_refreshing">Извините, что-то пошло не так при обновлении данных</string>
     <string name="welcome">Добро пожаловать,</string>
     <string name="home_desc">Что бы вы хотели купить?</string>
+    <string name="thumb_description">Thumb</string>
 </resources>
